--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,20 @@ jobs:
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
-      
+
       - name: Build with Gradle
         run: |
           chmod +x gradlew
           ./gradlew assembleRelease
+
+      - name: Get Version Name
+        id: version
+        run: |
+          VERSION_NAME=$(grep "versionName" app/build.gradle | awk -F '"' '{print $2}' | head -n 1)
+          echo "version_name=$VERSION_NAME" >> $GITHUB_OUTPUT
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-apk-${{ steps.version.outputs.version_name }}
+          path: app/build/outputs/apk/release/*.apk
